--- a/pkg/web/ng/intrasearch/src/app/app.component.html
+++ b/pkg/web/ng/intrasearch/src/app/app.component.html
@@ -2,10 +2,10 @@
   <button mat-icon-button class="toolbar-icon" aria-label="icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
-  <a routerLink="/" routerLinkActive="active" class="toolbar-link" ariaCurrentWhenActive="page">
+  <a routerLink="/list" routerLinkActive="active" class="toolbar-link" ariaCurrentWhenActive="page">
     Collections
   </a>
-  <a routerLink="/search" routerLinkActive="active" class="toolbar-link" ariaCurrentWhenActive="page">
+  <a routerLink="/query" routerLinkActive="active" class="toolbar-link" ariaCurrentWhenActive="page">
     Search
   </a>
   <span class="toolbar-spacer"></span>
@@ -17,5 +17,5 @@
     <!-- The routed views render in the <router-outlet>-->
     <router-outlet></router-outlet> 
     
-    <footer><p>Version:</p></footer>
+    <footer><p>Search the intranet</p></footer>
 </main>
