--- a/pkg/web/ng/intrasearch/src/app/components/collections-list/collections-list.component.html
+++ b/pkg/web/ng/intrasearch/src/app/components/collections-list/collections-list.component.html
@@ -1,7 +1,7 @@
 <mat-list role="list" *ngFor="let col of collectionRequest?.Collections">
     <mat-list-item role="listitem" routerLink="/query/{{col.Name}}" >
-        <button mat-icon-button>
+        <!-- <button mat-icon-button> -->
         {{col.Name}}
-        </button>
+        <!-- </button>  -->
     </mat-list-item>
 </mat-list>
