--- a/pkg/web/ng/intrasearch/src/app/app.component.html
+++ b/pkg/web/ng/intrasearch/src/app/app.component.html
@@ -1,21 +1,27 @@
-<mat-toolbar>
-  <button mat-icon-button class="toolbar-icon" aria-label="icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <a routerLink="/list" routerLinkActive="active" class="toolbar-link" ariaCurrentWhenActive="page">
-    Collections
-  </a>
-  <a routerLink="/query" routerLinkActive="active" class="toolbar-link" ariaCurrentWhenActive="page">
-    Search
-  </a>
-  <span class="toolbar-spacer"></span>
-<button mat-icon-button class="toolbar-icon" aria-label="icon-button with menu icon">
-  <mat-icon>settings</mat-icon>
-</button>
-</mat-toolbar>
-<main class="main">   
-    <!-- The routed views render in the <router-outlet>-->
-    <router-outlet></router-outlet> 
-    
-    <footer><p>Search the intranet</p></footer>
-</main>
+<div class="container">
+  <header>
+    <mat-toolbar>
+      <button mat-icon-button class="toolbar-icon" aria-label="icon-button with menu icon">
+        <mat-icon>menu</mat-icon>
+      </button>
+      <a routerLink="/list" routerLinkActive="active" class="toolbar-link" ariaCurrentWhenActive="page">
+        Collections
+      </a>
+      <a routerLink="/query" routerLinkActive="active" class="toolbar-link" ariaCurrentWhenActive="page">
+        Search
+      </a>
+      <span class="toolbar-spacer"></span>
+      <button mat-icon-button class="toolbar-icon" aria-label="icon-button with menu icon">
+        <mat-icon>settings</mat-icon>
+      </button>
+    </mat-toolbar>
+  </header>
+
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+
+  <footer>
+    <p>Search the intranet</p>
+  </footer>
+</div>
