working search results

--- a/pkg/web/ng/intrasearch/src/app/app.component.html
+++ b/pkg/web/ng/intrasearch/src/app/app.component.html
@@ -1,14 +1,14 @@
 <div class="container">
   <header>
     <mat-toolbar>
-      <button mat-icon-button class="toolbar-icon" aria-label="icon-button with menu icon">
+      <!-- <button mat-icon-button class="toolbar-icon" aria-label="icon-button with menu icon">
         <mat-icon>menu</mat-icon>
-      </button>
+      </button> -->
       <a routerLink="/list" routerLinkActive="active" class="toolbar-link" ariaCurrentWhenActive="page">
-        Collections
+       <button>Intranet Spaces</button> 
       </a>
       <a routerLink="/query" routerLinkActive="active" class="toolbar-link" ariaCurrentWhenActive="page">
-        Search
+        <button>Search</button>
       </a>
       <span class="toolbar-spacer"></span>
       <button mat-icon-button class="toolbar-icon" aria-label="icon-button with menu icon">
