--- a/pkg/web/ng/intrasearch/src/app/components/collections-list/collections-list.component.html
+++ b/pkg/web/ng/intrasearch/src/app/components/collections-list/collections-list.component.html
@@ -1,4 +1,4 @@
-<mat-list role="list" *ngFor="let col of collectionRequest?.Collections">
+<mat-list role="list" *ngFor="let col of collectionResponse?.Collections">
     <mat-list-item role="listitem" routerLink="/query/{{col.Name}}" >
         <!-- <button mat-icon-button> -->
         {{col.Name}}
