nice input syntax

--- a/pkg/web/ng/intrasearch/src/app/components/search/search.component.html
+++ b/pkg/web/ng/intrasearch/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <header>
-        <input type="text" id="search" [formControl]="searchQuery" (keydown.enter)="search()" placeholder="Search in {{collectionName}}" >
+        <input type="text" id="search" [formControl]="searchQuery" (keydown.enter)="search()" placeholder="Search in {{collection}}" >
         <button mat-icon-button (click)="search()"  >
             <mat-icon>search</mat-icon>
         </button>
