--- a/pkg/web/ng/intrasearch/src/app/components/search-result-item/search-result-item.component.html
+++ b/pkg/web/ng/intrasearch/src/app/components/search-result-item/search-result-item.component.html
@@ -1,4 +1,11 @@
-<p>{{ doc?.Title}}</p>
+<div>
+    <div class="title">{{ doc?.Title}}</div>
 <a href="{{ doc?.URL }}">{{ doc?.URL }}</a>
+</div>
+
 <p>{{ doc?.Summary }}</p>
-{{doc?.Content}}
+
+
+<p class="content">
+    {{ doc?.Content  }}
+</p>
