--- a/pkg/web/ng/intrasearch/src/app/components/search/search.component.html
+++ b/pkg/web/ng/intrasearch/src/app/components/search/search.component.html
@@ -1,15 +1,19 @@
 <div class="container">
     <header>
-        <input type="text" id="search" [formControl]="searchQuery" (keydown.enter)="search()" placeholder="Search in {{collection}}" >
-        <button mat-icon-button (click)="search()"  >
-            <mat-icon>search</mat-icon>
-        </button>
+        <p>
+            <mat-form-field appearance="fill">
+                <mat-label>Search {{collection}}</mat-label>
+                <input matInput id="search" [formControl]="searchQuery" (keydown.enter)="search()" >
+                <mat-icon matSuffix (click)="search()" >search</mat-icon>
+            </mat-form-field>
+        </p>
+
     </header>
 
     <main>
         <div *ngFor="let doc of searchResult?.Documents">
             <app-search-result-item [doc]="doc" />
-        
+            <hr />
         </div>
     </main>
 </div>
