--- a/pkg/web/ng/intrasearch/src/app/components/search/search.component.css
+++ b/pkg/web/ng/intrasearch/src/app/components/search/search.component.css
@@ -1,3 +1,21 @@
 mat-form-field {
     width: 100%;
 }
+
+.searchbar {
+    flex-shrink: 0;
+}
+
+.results {
+    flex-grow: 1;
+    overflow-y: auto;
+    overflow-x: hidden;
+    min-height: 2em;
+}
+
+.container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+}
