--- a/pkg/web/ng/intrasearch/src/app/components/search/search.component.html
+++ b/pkg/web/ng/intrasearch/src/app/components/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <header>
+    <div class="searchbar">
         <p>
             <mat-form-field appearance="fill">
                 <mat-label>Search {{collection}}</mat-label>
@@ -8,12 +8,12 @@
             </mat-form-field>
         </p>
 
-    </header>
+    </div>
 
-    <main>
+    <div class="results">
         <div *ngFor="let doc of searchResult?.Documents">
             <app-search-result-item [doc]="doc" />
             <hr />
         </div>
-    </main>
+    </div>
 </div>
