setting button and minor changes

--- a/pkg/web/ng/intrasearch/src/app/app.component.html
+++ b/pkg/web/ng/intrasearch/src/app/app.component.html
@@ -11,9 +11,7 @@
         <button>Search</button>
       </a> -->
       <span class="toolbar-spacer"></span>
-      <button mat-icon-button class="toolbar-icon" aria-label="icon-button with menu icon">
-        <mat-icon>settings</mat-icon>
-      </button>
+      <app-settings-button />
     </mat-toolbar>
   </header>
 
