optimise query use query params whil switching spaces

--- a/pkg/web/ng/intrasearch/src/app/components/search-result-item/search-result-item.component.html
+++ b/pkg/web/ng/intrasearch/src/app/components/search-result-item/search-result-item.component.html
@@ -4,10 +4,10 @@
 </div>
 <small>Modified: {{doc?.Modified | slice:0:16}}</small>
 
-<p>{{ doc?.Summary }}</p>
+<p class="max-line-3">{{ doc?.Summary }}</p>
 
 <!-- 
-<p class="content" >
+<p class="max-line-3" >
     {{ doc?.Content  }}
 </p>
  -->
