--- a/pkg/web/ng/intrasearch/src/app/components/space-list-button/space-list-button.component.html
+++ b/pkg/web/ng/intrasearch/src/app/components/space-list-button/space-list-button.component.html
@@ -5,7 +5,7 @@
 <mat-menu #menu="matMenu" >
     <div class="menuTitle">Search in:</div>
     <span *ngFor="let col of collectionResponse?.Collections">
-        <button mat-menu-item routerLink="/query/{{col.Name}}">{{ col.Name }}</button>
+        <button mat-menu-item routerLink="/query/{{col.Name}}" queryParamsHandling="preserve">{{ col.Name }}</button>
     </span>
 </mat-menu>
 
