--- a/pkg/web/ng/intrasearch/src/app/components/search-result-item/search-result-item.component.html
+++ b/pkg/web/ng/intrasearch/src/app/components/search-result-item/search-result-item.component.html
@@ -1,13 +1,23 @@
-<div>
-    <div class="title">{{ doc?.Title}}</div>
-<a href="{{ doc?.URL }}">{{ doc?.URL }}</a>
-</div>
-<small>Modified: {{doc?.Modified | slice:0:16}}</small>
+<mat-card appearance="outlined">
 
-<p class="max-line-3">{{ doc?.Summary }}</p>
-
-<!-- 
-<p class="max-line-3" >
-    {{ doc?.Content  }}
-</p>
- -->
+    <mat-card-header>
+        <mat-card-title>{{ doc?.Title}}</mat-card-title>
+        <mat-card-subtitle>
+            <a href="{{ doc?.URL }}">{{ doc?.URL }}</a>
+        </mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+        <p class="max-line-3">{{ doc?.Summary }}</p>
+    </mat-card-content>
+    <mat-card-footer class="card-footer">
+        <small>Modified: {{doc?.Modified | slice:0:16}}</small>
+        <small>
+            <mat-card-actions>
+                <button mat-button (click)="toggleShowContent()" type="checkbox">{{showContentButton}}</button>
+            </mat-card-actions>
+            <pre *ngIf="showContent" class="content mat-mdc-card" id="divshow">
+                    {{ doc?.Content }}
+                        </pre>
+        </small>
+    </mat-card-footer>
+</mat-card>
