--- a/pkg/web/ng/intrasearch/src/app/app.component.html
+++ b/pkg/web/ng/intrasearch/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <header>
     <mat-toolbar>
-     <app-space-list-button />
-     <span class="toolbar-spacer"></span>
+      <app-space-list-button />
+      <span class="toolbar-spacer"></span>
       <span>Intranet Search</span>
       <!-- <a routerLink="/list" routerLinkActive="active" class="toolbar-link" ariaCurrentWhenActive="page">
        <button>Intranet Spaces</button> 
@@ -22,6 +22,9 @@
   <footer>
     <p>
       <small>
+        Using <i>llama3.2</i> for text generation and <i>mxbai-embed-large</i> for embedding.
+      </small>
+      <small style=" position: relative; float: right; padding-right: 20px;">
         Please give feedback to <a href="mailto:patrick.vogt@unibas.ch">Patrick Vogt</a>
       </small>
     </p>
